--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#26364F</color>
+    <color name="colorPrimaryDark">#26364F</color>
+    <color name="colorAccent">#FF4E60</color>
+
+    <color name="pink">#FF4E60</color>
+    <color name="light_pink">#8C4156</color>
+    <color name="basic">#26364F</color>
+    <color name="light_violet">#463A52</color>
+
+
+    <color name="white">#fff</color>
+    <color name="black">#000</color>
 </resources>
