--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -4,24 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.ticket.ui.fonts.CustomFontTextView
+    <TextView
         android:id="@+id/ready"
-        android:gravity="center"
-        android:textColor="@color/dark_grey"
         android:text="@string/go"
-        android:textSize="40sp"
+        style="@style/Standart.huge40"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_centerVertical="true"/>
 
-    <com.ticket.ui.fonts.CustomFontButton
+    <Button
 
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ready"
         android:layout_centerHorizontal="true"
-        android:fontFamily="@font/sue_ellen_francisco"
         android:text="@string/yes"
         android:textColor="@drawable/r_button_text_colors"
         android:textSize="30sp"
