--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#26364F</color>
-    <color name="colorPrimaryDark">#26364F</color>
-    <color name="colorAccent">#FF4E60</color>
+    <color name="colorPrimary">#3c3c3c</color>
+    <color name="colorPrimaryDark">#3c3c3c</color>
+    <color name="colorAccent">#3c3c3c</color>
+
+    <color name="dark_blue">#26364F</color>
+    <color name="pink">#FF4E60</color>
 
     <color name="dark_grey">#3c3c3c</color>
     <color name="red">#FF0000</color>
+
+    <color name="white">#fff</color>
+    <color name="black">#000</color>
 
 
 </resources>
