--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,8 @@
         <item name="android:textSize">30sp</item>
     </style>
 
+    <style name="button_tv">
+        <item  name="android:textAllCaps">false</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
