--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
 
     <color name="white">#fff</color>
     <color name="black">#000</color>
+    <color name="grey">#87939A</color>
 
 
 </resources>
