--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,35 +6,40 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-
-    <style name="type">
+    <style name="medium40">
         <item name="android:fontFamily">@font/ticket</item>
+        <item name="android:textSize">40dp</item>
+    </style>
+
+    <style name="medium40.darkGray">
         <item name="android:textColor">@color/dark_grey</item>
-        <item name="android:gravity">center</item>
     </style>
 
-    <style name="type.huge40">
-        <item name="android:textSize">40sp</item>
-    </style>
-
-    <style name="type.medium22">
+    <style name="medium22">
+        <item name="android:fontFamily">@font/ticket</item>
         <item name="android:textSize">22sp</item>
     </style>
 
-    <style name="type.medium30">
+    <style name="medium22.darkGray">
+        <item name="android:textColor">@color/dark_grey</item>
+    </style>
+
+    <style name="medium30">
+        <item name="android:fontFamily">@font/ticket</item>
         <item name="android:textSize">30sp</item>
     </style>
 
-    <style name="button_tv">
-        <item  name="android:textAllCaps">false</item>
-        <item name="android:gravity">center</item>
+    <style name="medium30.darkGray">
+        <item name="android:textColor">@color/dark_grey</item>
     </style>
 
-    <style name="splash">
+    <style name="medium50">
+        <item name="android:textSize">50sp</item>
         <item name="android:fontFamily">@font/ticket</item>
+    </style>
+
+    <style name="medium50.white">
         <item name="android:textColor">@color/white</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textSize">60sp</item>
     </style>
 
 </resources>
