--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -7,13 +7,14 @@
     <TextView
         android:id="@+id/ready"
         android:text="@string/go"
-        style="@style/type.huge40"
+        style="@style/medium40.darkGray"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:gravity="center"
         android:layout_centerVertical="true"/>
 
-    <Button
-
+    <androidx.appcompat.widget.AppCompatButton
+        android:fontFamily="@font/ticket"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
