--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -5,11 +5,12 @@
     android:layout_height="match_parent">
 
     <TextView
-        style="@style/type.huge40"
+        style="@style/medium40.darkGray"
         android:id="@+id/tv_rules"
         android:text="@string/tutorial"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_marginTop="@dimen/spacing_small_8"
         android:layout_alignParentTop="true"/>
 
@@ -25,11 +26,12 @@
         android:src="@drawable/win_ticket"/>
 
     <TextView
-        style="@style/type.medium22"
+        style="@style/medium22.darkGray"
         android:textColor="@color/dark_grey"
         android:text="@string/rules_of_the_game_f"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_below="@id/iv_rules"
         android:layout_marginStart="@dimen/spacing_tiny_4"
         android:layout_marginEnd="@dimen/spacing_tiny_4"
