--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -5,31 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.login.LoginScreen"
-    android:background="@drawable/background_login">
+    android:background="@color/dark_grey">
 
     <TextView
-        android:textSize="50sp"
-        android:gravity="center"
         android:id="@+id/hello"
+        style="@style/medium50.white"
+        android:gravity="center"
         android:text="@string/hello"
         android:layout_marginTop="150dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_above="@id/login_et"/>
 
     <EditText
         android:id="@+id/login_et"
-        style="@style/button_tv"
+        android:textColorHint="@color/black"
+        android:layout_centerInParent="true"
+        android:fontFamily="@font/ticket"
+        android:gravity="center"
         android:hint="@string/enter_nickname"
         android:background="@drawable/custom_et_login"
-        android:layout_below="@id/hello"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:cursorVisible="false"/>
     <Button
-        android:textColor="@color/red"
         android:id="@+id/login_btn"
+        android:fontFamily="@font/ticket"
+        android:textColor="@color/white"
         android:textAllCaps="false"
         android:text="@string/continue_l"
         android:layout_width="100dp"
