--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,9 +7,9 @@
     android:background="@color/dark_grey">
 
     <ImageView
-        android:id="@+id/splash_iv"
-        android:layout_centerInParent="true"
+        android:id="@+id/iv_logo"
         android:src="@drawable/logo"
+        android:layout_centerInParent="true"
         android:layout_width="200dp"
         android:layout_height="200dp"/>
 
