--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -14,6 +14,7 @@
         android:layout_centerVertical="true"/>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_start"
         android:fontFamily="@font/ticket"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
