--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,10 +14,10 @@
         android:layout_marginTop="150dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/login_et"/>
+        android:layout_above="@id/et_login"/>
 
     <EditText
-        android:id="@+id/login_et"
+        android:id="@+id/et_login"
         android:textColorHint="@color/black"
         android:layout_centerInParent="true"
         android:fontFamily="@font/ticket"
@@ -28,7 +27,8 @@
         android:layout_marginTop="40dp"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:cursorVisible="false"/>
+        android:cursorVisible="false"
+        android:paddingRight="@dimen/spacing_tiny_4"/>
     <Button
         android:id="@+id/btn_login"
         android:fontFamily="@font/ticket"
@@ -37,7 +37,7 @@
         android:text="@string/continue_l"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_below="@id/login_et"
+        android:layout_below="@id/et_login"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_button_login"/>
