--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,4 +42,15 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="medium80">
+        <item name="android:textSize">80sp</item>
+        <item name="android:fontFamily">@font/ticket</item>
+    </style>
+
+    <style name="medium80.white">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+
+
 </resources>
