--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="pink">#FF4E60</color>
 
     <color name="dark_grey">#3c3c3c</color>
+    <color name="very_dark_grey">#393939</color>
     <color name="red">#FF0000</color>
 
     <color name="white">#fff</color>
