--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,7 +47,16 @@
         <item name="android:fontFamily">@font/foma</item>
     </style>
 
+    <style name="foma25">
+        <item name="android:textSize">25sp</item>
+        <item name="android:fontFamily">@font/foma</item>
+    </style>
+
     <style name="foma50.red">
+        <item name="android:textColor">@color/red</item>
+    </style>
+
+    <style name="foma25.red">
         <item name="android:textColor">@color/red</item>
     </style>
 
