--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -34,7 +34,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/spacing_small_8"
         android:layout_marginEnd="6dp"
-        android:src="@drawable/win_ticket"/>
+        android:src="@drawable/lose_ticket"/>
 
     <TextView
         style="@style/medium22.darkGray"
