--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -28,8 +28,9 @@
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:cursorVisible="false"
-        android:paddingRight="@dimen/spacing_tiny_4"/>
-    <Button
+        android:paddingEnd="@dimen/spacing_tiny_4"/>
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_login"
         android:fontFamily="@font/ticket"
         android:textColor="@drawable/btn_text_color"
