--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -14,8 +14,7 @@
             android:id="@+id/tv_gameTickets"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="356741"
-            android:layout_marginBottom="@dimen/spacing_huge_32"
+            android:text="@string/any_ticket_number"
             android:textColor="@color/very_dark_grey"
             android:textSize="40sp"
             android:layout_width="wrap_content"
@@ -96,16 +95,16 @@
 
     <TextView
         android:id="@+id/tv_gameTime"
-        android:text="0"
+        android:text="@string/zero"
         android:gravity="center"
         style="@style/foma50.red"
         android:layout_above="@id/tv_points"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_tryAgain"
-        android:text="Попробоавть ещё раз? Да!"
+        android:text="@string/try_again_btn_text"
         android:gravity="center"
         android:visibility="gone"
         android:layout_above="@+id/tv_points"
