--- a/app/src/main/res/layout/item_records.xml
+++ b/app/src/main/res/layout/item_records.xml
@@ -5,18 +5,28 @@
     android:layout_height="wrap_content">
 
     <TextView
-        style="@style/medium22.darkGray"
-        android:id="@+id/numbers"
+        android:id="@+id/tv_number"
         android:text="@string/one"
+        style="@style/medium22.darkGray"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
         style="@style/medium22.darkGray"
-        android:id="@+id/username"
+        android:layout_marginStart="16dp"
+        android:id="@+id/tv_record"
+        android:text="@string/one"
+        android:layout_toEndOf="@id/tv_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
+    <TextView
+        style="@style/medium22.darkGray"
+        android:id="@+id/tv_username"
         tools:text = "Имена пользователей"
         android:layout_marginStart="16dp"
-        android:layout_toEndOf="@id/numbers"
+        android:layout_toEndOf="@id/tv_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
