--- a/app/src/main/res/layout/item_records.xml
+++ b/app/src/main/res/layout/item_records.xml
@@ -1,33 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal" android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_number"
-        android:text="@string/one"
-        style="@style/medium22.darkGray"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        style="@style/medium22.darkGray"
-        android:layout_marginStart="16dp"
-        android:id="@+id/tv_record"
-        android:text="@string/one"
-        android:layout_toEndOf="@id/tv_username"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:layout_marginTop="@dimen/spacing_small_8"
+        android:orientation="vertical">
 
-    <TextView
-        style="@style/medium22.darkGray"
-        android:id="@+id/tv_username"
-        tools:text = "Имена пользователей"
-        android:layout_marginStart="16dp"
-        android:layout_toEndOf="@id/tv_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/iv_crown"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:src="@drawable/crown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/spacing_small_8"/>
 
-</RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_container"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_number"
+                android:text="@string/number"
+                style="@style/medium22.darkGray"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tv_username"
+                android:layout_toEndOf="@id/tv_number"
+                android:layout_gravity="center"
+                style="@style/medium22.darkGray"
+                tools:text="@string/user_names"
+                android:layout_marginStart="@dimen/spacing_small_8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tv_record"
+                android:text="@string/_10"
+                android:layout_toEndOf="@id/tv_username"
+                style="@style/medium22.darkGray"
+                android:layout_marginStart="@dimen/spacing_normal_16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
