Обновлен дизайн login-screen. Добавлены новые шрифты, стили, цвет.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
 
     <color name="white">#fff</color>
     <color name="black">#000</color>
+    <color name="black_for_ed">#30000000</color>
     <color name="grey">#87939A</color>
 
 
