--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,6 +69,34 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="baufra21">
+        <item name="android:fontFamily">@font/baufa_regular</item>
+        <item name="android:textSize">21sp</item>
+    </style>
+
+    <style name="baufra21_ed">
+        <item name="android:fontFamily">@font/baufa_regular</item>
+        <item name="android:textSize">21sp</item>
+    </style>
+
+    <style name="baufra21_ed.white">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+    </style>
+
+    <style name="baufra21.white">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="baufra60">
+        <item name="android:fontFamily">@font/baufa_regular</item>
+        <item name="android:textSize">60sp</item>
+    </style>
+
+    <style name="baufra60.white">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 
 
 </resources>
