--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -44,6 +44,23 @@
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
+        android:visibility="visible"
+        android:layout_marginBottom="70dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/custom_button_login"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_change"
+        android:layout_marginTop="@dimen/spacing_small_8"
+        android:text="@string/change"
+        android:textSize="17sp"
+        android:textColor="@drawable/btn_text_color"
+        android:textAllCaps="false"
+        android:fontFamily="@font/baufra_demibold"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="70dp"
         android:layout_alignParentBottom="true"
         android:background="@drawable/custom_button_login"/>
