--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -55,4 +55,17 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/spacing_normal_16"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_name_changer"
+        android:text="@string/change_name"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:textSize="19sp"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:fontFamily="@font/baufra_demibold"
+        android:background="@drawable/custom_button_login"
+        android:layout_below="@id/btn_records"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
