--- a/app/src/main/res/layout/item_records.xml
+++ b/app/src/main/res/layout/item_records.xml
@@ -41,7 +41,8 @@
                 tools:text="@string/user_names"
                 android:layout_marginStart="@dimen/spacing_small_8"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"/>
 
             <TextView
                 android:id="@+id/tv_record"
